# vpn_config_parser_core

./: .gitignore  Cargo.toml  build.sh  otchet.odt  pyproject.toml  readme.md  text.xlsx  vpn_config_parser.pyi  vpn_server.config
notebooks/: pandas_experiments.ipynb
python/: __main__.py  converters.py  declare_itertools.py
src/: lib.rs  main.rs
src/lexems/: declare.rs  hash_comment.rs  mod.rs
src/lexems/declare/: constant.rs  definition.rs  mod.rs
vpn_config_parser/: __init__.py  vpn_config_parser.pyi
