[build-system]
build-backend = "maturin"
requires = ["maturin>=1.7,<2.0"]

[project]
authors = [
  {name = "Pozdeev Vladislav", email = "wennerryle@gmail.com", telegram = "t.me/wennerryle"},
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
name = "vpn_config_parser"
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["*.pyi"]
python-source = "python"

[tool.mypy]
ignore_missing_imports = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
